# tide-rsvp-api

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/models/: contact_status.rs  dietary_restrictions.rs  dish_preferences.rs  mod.rs  rsvp.rs  rsvp_query.rs
src/routes/: household.rs  mod.rs  rsvp.rs
src/services/: mod.rs  rsvp.rs
