[package]
name = "test-tide"
version = "0.1.0"
authors = ["Blaine Price <blaine@ario.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1.0.115"
serde_json = "1.0.57"
uuid = "0.8.1"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
dynomite = "0.10.0"