[package]
name = "test-tide"
version = "0.1.0"
authors = ["Blaine Price <blaine@ario.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
tokio-async-std = "1.5.3"
serde = "1.0.115"
serde_json = "1.0.57"
uuid = { version = "0.8.1", features=["serde", "v4"] }
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
dynomite = "0.10.0"
dynomite-derive = "0.10.0"